--- a/css/main.css
+++ b/css/main.css
@@ -6745,3 +6745,16 @@ label.panel-block {
 .footer {
   background-color: #fafafa;
   padding: 3rem 1.5rem 6rem; }
+
+.main header.navbar {
+  background: none; }
+
+body.main {
+  background: linear-gradient(rgba(10, 10, 10, 0.5), rgba(10, 10, 10, 0.6)), url("/images/desk.jpg") no-repeat;
+  background-size: cover; }
+
+.form {
+  background-color: rgba(255, 255, 255, 0.9);
+  padding: 2rem; }
+  .form .tag {
+    background: transparent; }
