--- a/css/main.css
+++ b/css/main.css
@@ -6750,6 +6750,9 @@ label.panel-block {
 .main header.navbar {
   background: rgba(255, 255, 255, 0.8); }
 
+header.navbar .navbar-link {
+  text-transform: capitalize; }
+
 header.navbar .navbar-item span {
   font-size: 1.5rem;
   font-weight: 600; }
@@ -6760,6 +6763,8 @@ body {
   background-size: cover auto;
   line-height: 1;
   min-height: 100vh; }
+  body .section {
+    border-radius: 6px; }
   body > .container {
     padding: 1rem; }
   body > .container h1 {
@@ -6768,8 +6773,6 @@ body {
     body > .container .options {
       margin: 0 auto;
       width: 60%; } }
-  body .title {
-    font-weight: 300; }
 
 .card.box {
   padding: 0; }
@@ -6793,6 +6796,15 @@ body {
   .manage hr {
     margin-bottom: .5rem; }
 
+.invoice .subtitle {
+  margin-bottom: 0; }
+
+.invoice p {
+  line-height: 1.5rem; }
+
+.invoice .billing-details {
+  margin-top: 1rem; }
+
 .invoice-list {
   margin-bottom: 2rem; }
   @media screen and (min-width: 1088px) {
@@ -6800,6 +6812,8 @@ body {
       text-align: center; } }
   .invoice-list li {
     align-items: center; }
+    .invoice-list li div {
+      text-transform: capitalize; }
     .invoice-list li:hover {
       background-color: whitesmoke;
       transition: all 0.3s ease; }
