--- a/sass/main.scss
+++ b/sass/main.scss
@@ -82,12 +82,9 @@ body {
     line-height: 1rem;
   }
 
-  .notes {
-    margin-bottom: 2rem;
+  .notes { margin-bottom: 2rem; }
 
-    .title { margin-bottom: .5rem; }
-  }
-
+  .title { margin-bottom: .5rem; }
 
   .table {
 
