Logout Fn and Error Messages - moved the logout function back to the main.js because it looks cleaner there! - added utils.js for error message handling - updated some HTML files that will need error handling - updated SCSS file for error messages - Few minor tweaks to the header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -134,7 +134,9 @@ footer { padding: 3rem 1.5rem 6rem; }
 }
 
 .hidden {
+  height: 0;
   opacity: 0;
+  padding: 0;
   transition: $transition;
   visibility: none;
 }
