display invoice information & devide paid and outstanding invoices for received invoices page

--- a/css/main.css
+++ b/css/main.css
@@ -3401,6 +3401,7 @@ a.tag:hover {
   .title.is-2 {
     font-size: 2.5rem; }
   .title.is-3 {
+    margin-top: 2rem;
     font-size: 2rem; }
   .title.is-4 {
     font-size: 1.5rem; }
