--- a/css/main.css
+++ b/css/main.css
@@ -6803,8 +6803,12 @@ body {
     line-height: 1rem; }
   .invoice .notes {
     margin-bottom: 2rem; }
+    .invoice .notes .content {
+      text-transform: capitalize; }
   .invoice .title {
     margin-bottom: .5rem; }
+  .invoice .table .line-item td {
+    text-transform: capitalize; }
   .invoice .table td:nth-child(1) {
     width: 50%; }
   .invoice .table td:nth-child(2) {
