added error handler on signup

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,7 +2,7 @@
 @import "../node_modules/bulma/bulma.sass";
 
 /* Vars */
-$transition: all .3s fade-in;
+$transition: all .3s ease;
 
 header.navbar {
 
