--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,13 +10,7 @@ header.navbar {
     background: transparentize($white, .2);
   }
 
-  .navbar-link {
-    text-transform: capitalize;
-
-    @media screen and (max-width: $tablet) {
-      display: none;
-    }
-  }
+  .navbar-link { text-transform: capitalize; }
 
   .navbar-item span {
     font-size: 1.5rem;
